[gd_scene load_steps=3 format=2]

[ext_resource path="res://icons/home.svg" type="Texture" id=1]
[ext_resource path="res://scripts/Home_button.gd" type="Script" id=2]

[node name="Home_button" type="Control" groups=["navitem"]]
margin_top = 50.0
margin_right = 70.0
margin_bottom = 90.0
rect_min_size = Vector2( 70, 40 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="homeBG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 70, 0 )
mouse_filter = 2
color = Color( 0.152941, 0.129412, 0.262745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 70.0
margin_right = 88.0
text = "Home menu"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="Sprite" parent="."]
position = Vector2( 34, 20 )
scale = Vector2( 0.214844, 0.214844 )
texture = ExtResource( 1 )

[node name="active" type="ColorRect" parent="."]
margin_right = 10.0
margin_bottom = 40.0
mouse_filter = 2
color = Color( 0.152941, 0.129412, 0.647059, 0.945098 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="." to="." method="_on_Home_button_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Home_button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Home_button_mouse_exited"]
